[build-system]
requires = [
    "setuptools >= 64",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "robist"
authors = [
	{name = "Justin Starreveld", email = "j.s.starreveld@uva.nl"},
	{name = "Guanyu Jin", email = "g.jin@uva.nl"},
]
version = "2024.02.0"
description = "Robust Optimization by Iterative Scenario Sampling and Statistical Testing"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
	"numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
	"cvxpy",
	"pyprojroot",
]	
requires-python = ">= 3.7"
license = {file = "LICENSE.txt"}	

[project.optional-dependencies]
examples = [
    "pandas",
]

[project.urls]
Repository = "https://github.com/JustinStarreveld/ROBIST/"