[metadata]
name = robist
version = 0.0.1
description = Robust Optimization by Iterative Scenario Sampling and Statistical Testing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JustinStarreveld/ROBIST/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires = 
    numpy
    scipy
    time
    math
    cvxpy
    itertools
    warnings
    sklearn
    matplotlib
